2.3.1/_sources/arcgis.geometry.functions.rst.txt
arcgis.geometry.functions module
================================

.. automodule:: arcgis.geometry.functions

GeometryJob
-----------
.. autoclass:: arcgis.geometry.GeometryJob
    :inherited-members:
    :members:
    :undoc-members:

Enumerations
------------
AreaUnits
^^^^^^^^^
.. autoclass:: arcgis.geometry.functions.AreaUnits
    :inherited-members:
    :members:
    :undoc-members:

LengthUnits
^^^^^^^^^^^
.. autoclass:: arcgis.geometry.functions.LengthUnits
    :inherited-members:
    :members:
    :undoc-members:

Functions
---------
areas_and_lengths
^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.areas_and_lengths

auto_complete
^^^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.auto_complete

buffer
^^^^^^
.. autofunction:: arcgis.geometry.functions.buffer

convex_hull
^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.convex_hull

cut
^^^
.. autofunction:: arcgis.geometry.functions.cut

densify
^^^^^^^
.. autofunction:: arcgis.geometry.functions.densify

difference
^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.difference

distance
^^^^^^^^
.. autofunction:: arcgis.geometry.functions.distance

find_transformation
^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.find_transformation

from_geo_coordinate_string
^^^^^^^^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.from_geo_coordinate_string

generalize
^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.generalize

intersect
^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.intersect

label_points
^^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.label_points

lengths
^^^^^^^
.. autofunction:: arcgis.geometry.functions.lengths

offset
^^^^^^
.. autofunction:: arcgis.geometry.functions.offset

project
^^^^^^^
.. autofunction:: arcgis.geometry.functions.project

relation
^^^^^^^^
.. autofunction:: arcgis.geometry.functions.relation

reshape
^^^^^^^
.. autofunction:: arcgis.geometry.functions.reshape

simplify
^^^^^^^^
.. autofunction:: arcgis.geometry.functions.simplify

to_geo_coordinate_string
^^^^^^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.to_geo_coordinate_string

trim_extend
^^^^^^^^^^^
.. autofunction:: arcgis.geometry.functions.trim_extend

union
^^^^^
.. autofunction:: arcgis.geometry.functions.union
